cloud-ide-theia/cloud-ide-theia-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-ide-theia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: theia
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: theia
    spec:
      serviceAccount: theia
      serviceAccountName: theia
      containers:
      - image: elswork/theia:latest
        imagePullPolicy: Always
        name: container
        ports:
        - containerPort: 3000
          protocol: TCP
