cloud-ide-theia/cloud-ide-theia-route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: cloud-ide-theia
spec:
  to:
    kind: Service
    name: theia
    weight: 100
  port:
    targetPort: 3000
  wildcardPolicy: None
